Hijacker: merge changes